--- a/.github/workflows/3-open-a-pull-request.yml
+++ b/.github/workflows/3-open-a-pull-request.yml
@@ -76,7 +76,7 @@ jobs:
           }'
 
           # Check pull request title
-          if [ "${{ github.event.pull_request.title }}" != "Add my first file" ]; then
+          if [ "${{ github.event.pull_request.title }}" != "" ]; then
             checks=$(echo $checks | jq '.pr_title.passed = false')
             checks=$(echo $checks | jq '.pr_title.message = "Incorrect title"')
           fi
