--- a/.github/workflows/3-open-a-pull-request.yml
+++ b/.github/workflows/3-open-a-pull-request.yml
@@ -76,13 +76,13 @@ jobs:
           }'
 
           # Check pull request title
-          if [ "${{ github.event.pull_request.title }}" != "Create PROFILE.md" ]; then
-            checks=$(echo $checks | jq '.pr_title.passed = false')
+          if [ "${{ github.event.pull_request.title }}" = "Create PROFILE.md" ]; then
+            checks=$(echo $checks | jq '.pr_title.passed = true')
             checks=$(echo $checks | jq '.pr_title.message = "Incorrect title"')
           fi
 
           # Check if a pull request description exists
-          if [ "${{ github.event.pull_request.body }}" = "This is my github profile" ]; then
+          if [ "${{ github.event.pull_request.body }}" = "" ]; then
             checks=$(echo $checks | jq '.pr_description.passed = false')
             checks=$(echo $checks | jq '.pr_description.message = "Empty pull request description"')
           fi
